--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -1,3 +1,4 @@
-﻿div.gd-toolbar__column ul > li:last-of-type {
+﻿div.gd-toolbar__column ul > li:last-child,
+div.gd-toolbar__column ul > li:nth-last-child(2) {
     display: none;
 }
